# Flask

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  start_app  wsgi.py
blog/: app.py  commands.py  config.py  extensions.py  models.py
blog/admin/: __init__.py  admin.py  views.py
blog/api/: article.py  tag.py  user.py  views.py
blog/api/permissions/: user.py
blog/article/: views.py
blog/auth/: views.py
blog/author/: views.py
blog/forms/: article.py  user.py
blog/report/: views.py
blog/schemas/: __init__.py  arctcle.py  author.py  user.py
blog/start_page/: views.py
blog/templates/: base.html  navbar.html
blog/templates/admin/: admin.html  index.html
blog/templates/articles/: create_article.html  details.html  list.html
blog/templates/auth/: authcheck.html  login.html
blog/templates/author/: list.html
blog/templates/reports/: list.html
blog/templates/start_page/: start.html
blog/templates/users/: details.html  list.html  profile.html  register.html
blog/user/: views.py
migrations/versions/: 50b56d379003_.py  84e829d81052_.py  8d42bee0e50b_.py  a91da0d2bc34_.py  e4c3ddb9f80b_.py  fd4374b21ca7_.py
