[tool.poetry]
name = "my-first-flask"
version = "0.1.0"
description = ""
authors = ["T1monation <4timonaton@gmail.com>"]
readme = "README.md"
packages = [{include = "my_first_flask"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
black = "^23.1.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
