[tool.poetry]
name = "my-first-flask"
version = "0.1.0"
description = ""
authors = ["T1monation <4timonaton@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
black = "^23.1.0"
flask-sqlalchemy = "^3.0.3"
psycopg2-binary = "^2.9.5"
flask-login = "^0.6.2"
mimesis = "^7.0.0"
flask-migrate = "^4.0.4"
python-dotenv = "^1.0.0"
flask-admin = "^1.6.1"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
