[tool.poetry]
name = "test-flask"
version = "0.1.0"
description = "blog-on-flask project"
authors = ["T1monation <4timonaton@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "3.7"
flask = "1.1.4"
python-dotenv = "0.17.1"
flask-sqlalchemy = "2.5.1"
flask-login = "0.5.0"
flask-migrate = "3.0.0"
psycopg2-binary = "^2.9.5"
wtforms = "2.3.3"
flask-wtf = "0.15.1"
email-validator = "1.1.2"
flask-admin = "1.5.8"
flask-combo-jsonapi = "1.0.7"
combojsonapi = "1.1.1"
pyyaml = "5.4.1"
markupsafe = "2.0.1"
mimesis = "4.1.3"
apispec = "4.7.1"
requests = "^2.28.2"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
